--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,8 @@ services:
   - type: web
     name: heic-to-fe
     env: static
-    buildCommand: >
-      export NODE_OPTIONS="--openssl-legacy-provider" &&
-      yarn install &&
-      yarn build
+    buildCommand: yarn install && yarn build
     staticPublishPath: ./dist
     envVars:
       - key: NODE_VERSION
-        value: 18.19.1
-      - key: NODE_OPTIONS
-        value: --openssl-legacy-provider
+        value: 16.20.2
